--- a/index.html
+++ b/index.html
@@ -63,26 +63,9 @@
                     </div>
 
                 </div>
-                <div class="weather-forecast">
-                    <div class="row">
-                        <div class="col-2">
-                            <div class="weather-forecast-date">
-                            THU
-                            </div>
-                            <img src="https://openweathermap.org/img/wn/01n@2x.png" alt="" width="36">
-                        </br>
-                        <div class="weather-forecast-temperatures">
-                            <span class="weather-forecast-temperature-max">
-                            18°
-                            </span>
-                            <span class="weather-forecast-temperature-min">
-                            12°
-                            </span>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
+                <div class="weather-forecast" 
+                id="forecast">
+                   
             </div>
             <small>
                 <a href="https://github.com/shakibahadidi/vanilla-weather-app" target="_blank">
