--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
                     </div>
 
                 </div>
-                <div class="weather-forecast" 
-                id="forecast">
-                   
+                <div class="weather-forecast" id="forecast">
+
+                </div>
+
             </div>
             <small>
                 <a href="https://github.com/shakibahadidi/vanilla-weather-app" target="_blank">
@@ -73,9 +74,7 @@
                 </a> code, by Shakiba Hadidi
             </small>
         </div>
-
-    </div>
-    <script src="src/app.js"></script>
+        <script src="src/app.js"></script>
 </body>
 
 </html>
